--- a/main-app/public/partials/pivot-table.html
+++ b/main-app/public/partials/pivot-table.html
@@ -28,6 +28,12 @@
         top: 0;
         z-index: 10;
     }
+    #pivot-table-body td {
+        vertical-align: middle;
+    }
+    .cell-small-font {
+        font-size: 0.8rem; /* Or smaller if needed */
+    }
 </style>
 
 <div class="table-container mt-2 border">
